# Cpp-Basics-

cpp_basics/: CMakeLists.txt  array_example1.cpp  array_example2.cpp  cpp_foundation_1.cpp  cpp_if-else.cpp  cpp_lessons_3_loops.cpp  desicion_making.cpp  dice_roll_example.cpp  function_example.cpp  pointer-array_to_function.cpp  random_number_generator.cpp
cpp_header_exp/: CMakeLists.txt  arrays1.cpp  arrays1.hpp  main.cpp
