cmake_minimum_required(VERSION 3.21)
project(cpp_basics)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_basics
#        cpp_foundation_1.cpp
#        cpp_if-else.cpp
#        cpp_lessons_3_loops.cpp
#        desicion_making.cpp
#        function_example.cpp
#        random_number_generator.cpp
#        dice_roll_example.cpp
#        array_example1.cpp
#         array_example2.cpp
        pointer-array_to_function.cpp
         )
